Bug 393152 - Horizontal scrolling in Compact View can make rendered content shift to the right out of the View in Details and Icons View
Summary: Horizontal scrolling in Compact View can make rendered content shift to the r...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 22.04.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 442653 456335 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-04-15 02:02 UTC by kdebugs
Modified: 2023-09-06 08:47 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
composite screenshot of blank details and icons views (29.50 KB, image/png)
2018-04-15 02:06 UTC, kdebugs
Details
Screen recording (1.67 MB, video/x-matroska)
2022-07-04 20:57 UTC, postix
Details
Screenshot: Details View and Icon View shifted to the right by an empty column (403.93 KB, image/png)
2022-07-05 08:24 UTC, postix
Details
Screenshot: Icons View: Content is shifted to the right out of the window (157.54 KB, image/png)
2022-07-05 09:01 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kdebugs 2018-04-15 02:02:05 UTC
Wasn't sure which view to file this under, since they're all involved somehow.
After using compact view, switching to details view will show only a blank area where files should be.  This remains blank when switching to icons view, but you can switch back to compact view.  Resizing the window doesn't change this. Pressing F5 does no good.  Behavior remains until dolphin is restarted.

Reproducible: Always

Dolphin version 17.12.3 on Arch x86_64.
Reproduced with both Oxygen and Breeze widget styles.
Window width does seem to make a difference.  For me, it works when the white space of the files area is 353 or 360 pixels wide (I'm sure many other sizes too - didn't check; but it didn't work when full screen or when the files area was about 50% larger.)
(Probably not relevant, but I use "Use common properties for all folders" under General : View preferences.)

Steps to reproduce:
0) Set dolphin to a suitable size and use details view.  Close it.
1) Run 'dolphin /usr/bin'
2) Scroll to the bottom of this details view.
3) Click compact view.
4) Click back to details view.

Results:
Details view is now blank - no files showing.  Number of files shows up in status bar at the bottom, and there's plenty of white scrolling space, but nothing is shown.

Bonus:
5) Now click on icons view: same thing (blank) but lots of scroll space as if there were something to see.
Comment 1 kdebugs 2018-04-15 02:06:23 UTC
Created attachment 112037 [details]
composite screenshot of blank details and icons views
Comment 2 Julian Steinmann 2018-04-15 14:45:51 UTC
I can confirm this behavior with Dolphin 17.12.3 on KDE Neon User Edition. I'll change the status to CONFIRMED. Thanks for the detailed report!
Comment 3 Patrick Silva 2018-04-22 19:45:37 UTC
Also reproducible with Dolphin 18.04 on Arch Linux.
Comment 4 Justin Zobel 2020-10-25 01:21:03 UTC
Can confirm still an issue in 20.08.1
Comment 5 postix 2022-07-04 20:57:08 UTC
Created attachment 150397 [details]
Screen recording

STEPS TO REPRODUCE
1.  Open Dolphin in the "Compact view" mode
2.  Open a folder with many files
3.  Rubber band select the files so that you scroll from left to right (end)
4. Change to the "Details view"

OBSERVED RESULT
No files are displayed. Please see the screen recording.


SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220703
KDE Plasma Version: 5.25.2
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.5
Kernel Version: 5.18.6-1-default (64-bit)
Graphics Platform: Wayland
Comment 6 postix 2022-07-04 20:57:23 UTC
*** Bug 456335 has been marked as a duplicate of this bug. ***
Comment 7 postix 2022-07-04 21:00:22 UTC
Note to comment 5: Scrolling to the right is sufficient to trigger the bug. No need to select any files. Reproducible: Always.
Comment 8 postix 2022-07-05 08:24:23 UTC
Created attachment 150404 [details]
Screenshot: Details View and Icon View shifted to the right by an empty column

To comment 5: Depending on how much it was scrolled to the right:

It may happen that the content of the folder in the "Details View" and "Icon View" is still visible, but a _wide extra empty column_ was added on the left, making all the content shift to the right.

Thus it looks like a wrong origin or offset is used when rendering the content and in the extreme case, the content becomes completely rendered offscreen.
Comment 9 postix 2022-07-05 09:01:51 UTC
Created attachment 150405 [details]
Screenshot: Icons View: Content is shifted to the right out of the window

In this screenshot you can clearly see the content is shifted to the right and part of it is rendered outside of the window. 
If I make the window big enough (by spanning it over two screens and zooming out), I can in principle make the whole content visible again.
Comment 10 Amol Godbole 2023-09-03 17:53:57 UTC
*** Bug 442653 has been marked as a duplicate of this bug. ***
Comment 11 Amol Godbole 2023-09-03 18:05:39 UTC
Submitted a relevant MR @ https://invent.kde.org/system/dolphin/-/merge_requests/613
Comment 12 Amol Godbole 2023-09-06 08:47:04 UTC
Git commit 0e4d428e84099bf5d76e81640a2417d5457d83a4 by Amol Godbole.
Committed on 05/09/2023 at 06:58.
Pushed by meven into branch 'master'.

DolphinView: Reset scrollbars before changing view mode

When view modes are changed, the scrollbars are not reset. This can
cause the scroll area to be moved out of view after changing the view
mode, making the view unusable. This commit resets the scrollbars.

M  +4    -0    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/0e4d428e84099bf5d76e81640a2417d5457d83a4