DolphinView: Reset scrollbars before changing view mode

When view modes are changed, the scrollbars are not reset. This can
cause the scroll area to be moved out of view after changing the view
mode, making the view unusable. This commit resets the scrollbars.

BUG: 393152